Fixed #2 Navbar links renamed and finalized. Added About Us page and text content on the project replacing the homepage jumbotron text. Created Google Map nav link, which shows the custom stylized map zoomed out and covering the majority of relevent States.

--- a/css/default.css
+++ b/css/default.css
@@ -92,7 +92,7 @@ ul {
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 10px;
-  height: 500px;
+  height: 400px;
   width: 50%;
   margin: auto auto;
   z-index: 1;
